Updated webpack. Fixed npm vulnerabilities. Refactored code for better readability. Optimized password generation.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -25,7 +25,7 @@ body {
   margin: 50px auto;
   background: #fff;
   padding: 20px 25px;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 form input,
